Remove JrpcMessageDeframer and deprecated methods; refactor JSON-RPC handlers, WeatherService, and MCP bridge